--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Hello world!!!</h1>
     <h1>Cits virsraksts</h1>
     <h2>Mācos veidos mājaslapas</h2>
+    <h3>Virsraksts</h3>
+    <h1 class="heading-1">Profesionālās tālākizglītības centrs</h1>
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam earum quo et nemo, <br>
+        <b>magnam quaerat</b>, nisi sed quas tempore aliquam qui dolore enim quae mollitia <i>delectus</i> sapiente
+        porro <u>ullam iste</u>.
+    </p>
+
+
+    <ul id="saraksts">
+        <li>Pirmdiena</li>
+        <li>otrdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+    </ul>
+    <ol>
+        <li>Pirmdiena</li>
+        <li>otrdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+        <li>Trešdiena</li>
+    </ol>
+
+    <!-- komentārs -->
+
+    <a href="https://www.eiropascentrs.lv/lv" target="_blank">
+       Doties uz mācībām
+    </a>
+    <a href="url">
+        <h1>laižam</h1>
+    </a>
+    <a href="#saraksts">link text</a>
+
+
 
 </body>
+
 </html>
