--- a/index.html
+++ b/index.html
@@ -41,13 +41,36 @@
     <!-- komentārs -->
 
     <a href="https://www.eiropascentrs.lv/lv" target="_blank">
-       Doties uz mācībām
+        Doties uz mācībām
     </a>
     <a href="url">
         <h1>laižam</h1>
     </a>
     <a href="#saraksts">link text</a>
 
+
+    <img src="https://www.sportsdirect.com/images/imgzoom/84/84537062_xxl.jpg" alt="Italian Trulli" width="300">
+
+    <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
+
+    <h2>Tabula</h2>
+    <table>
+        <tr>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Country</th>
+        </tr>
+        <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>Germany</td>
+        </tr>
+        <tr>
+            <td>Centro comercial Moctezuma</td>
+            <td>Francisco Chang</td>
+            <td>Mexico</td>
+        </tr>
+    </table>
 
 
 </body>
