--- a/index.html
+++ b/index.html
@@ -54,21 +54,28 @@
     <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
 
     <h2>Tabula</h2>
-    <table>
+    <table border="1">
+       <tr>
+            <th colspan="3">Tabula</th>
+            <th rowspan="2">Ceturtā kolonna</th>
+       </tr>
         <tr>
             <th>Company</th>
             <th>Contact</th>
             <th>Country</th>
+             
         </tr>
         <tr>
             <td>Alfreds Futterkiste</td>
             <td>Maria Anders</td>
             <td>Germany</td>
+            <td>Germany</td>
         </tr>
         <tr>
             <td>Centro comercial Moctezuma</td>
             <td>Francisco Chang</td>
-            <td>Mexico</td>
+            <td colspan="2">Mexico</td>
+            <!-- <td>Mexico</td> -->
         </tr>
     </table>
 
