--- a/css.html
+++ b/css.html
@@ -13,7 +13,7 @@
 
 
 
-<body style="min-height:2000px">
+<body>
     <nav>
         <a href="index.html">Galvenā</a>
         <a href="html.html">HTML</a>
