--- a/css.html
+++ b/css.html
@@ -68,7 +68,7 @@
     <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
 
     <h2>Tabula</h2>
-    <table border="1">
+    <table>
        <tr>
             <th colspan="3">Tabula</th>
             <th rowspan="2">Ceturtā kolonna</th>
