--- a/html.html
+++ b/html.html
@@ -9,10 +9,6 @@
      <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-
-
-
-
 <body>
     <nav>
         <a href="index.html">Galvenā</a>
@@ -68,7 +64,7 @@
     <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
 
     <h2>Tabula</h2>
-    <table border="1">
+    <table >
        <tr>
             <th colspan="3">Tabula</th>
             <th rowspan="2">Ceturtā kolonna</th>
@@ -95,7 +91,7 @@
 
     <h2>HTML formas</h2>    
 
-    <form action="">
+    <form>
         <label for="name">Jūsu vārds</label>
         <input type="text" name="name" id="name"><br>
         <label for="surname">Jūsu uzvārds</label>
