--- a/index.html
+++ b/index.html
@@ -7,19 +7,27 @@
     
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
      <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Document</title>
+    <title>My new web</title>
 </head>
 
 
 
 
 <body style="min-height:2000px">
-    <nav>
-        <a href="index.html">Galvenā</a>
-        <a href="html.html">HTML</a>
-        <a href="css.html">CSS</a>
-        <a href="js.html">JS</a>
-    </nav>
+    <header>
+        <img src="" alt="" class="logo" >
+        <h1>Learn to make WebSites</h1>
+        <nav>
+            <a href="index.html">Galvenā</a>
+            <a href="html.html">HTML</a>
+            <a href="css.html">CSS</a>
+            <a href="js.html">JS</a>
+        </nav>
+    </header>
+
+
+
+   
 
 
     <h1>Hello world!!!</h1>
