--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>My new web</title>
 </head>
 
@@ -15,7 +15,7 @@
 
 <body style="min-height:2000px">
     <header>
-        <img src="" alt="" class="logo" >
+        <img src="" alt="" class="logo" />
         <h1>Learn to make WebSites</h1>
         <nav>
             <a href="index.html">Galvenā</a>
@@ -24,84 +24,100 @@
             <a href="js.html">JS</a>
         </nav>
     </header>
+    <div class="container">
+        <main>
+            <h1>Hello world!!!</h1>
+            <h1>Cits virsraksts</h1>
+            <h2>Mācos veidot mājaslapas</h2>
+            <h3>Virsraksts</h3>
+            <h1 class="heading-1">Profesionālās tālākizglītības centrs</h1>
+            <h1>My First Heading</h1>
+            <p>My first paragraph.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam earum quo et nemo, <br>
+                <b>magnam quaerat</b>, nisi sed quas tempore aliquam qui dolore enim quae mollitia <i>delectus</i>
+                sapiente
+                porro <u>ullam iste</u>.
+            </p>
+
+
+            <ul id="saraksts">
+                <li>Pirmdiena</li>
+                <li>otrdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+            </ul>
+            <ol>
+                <li>Pirmdiena</li>
+                <li>otrdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+                <li>Trešdiena</li>
+            </ol>
+
+            <!-- komentārs -->
+
+            <a href="https://www.eiropascentrs.lv/lv" target="_blank">
+                Doties uz mācībām
+            </a>
+            <a href="url">
+                <h1>laižam</h1>
+            </a>
+            <a href="#saraksts">link text</a>
+
+
+            <img src="https://www.sportsdirect.com/images/imgzoom/84/84537062_xxl.jpg" alt="Italian Trulli" width="300">
+
+            <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
+
+            <h2>Tabula</h2>
+            <table border="1">
+                <tr>
+                    <th colspan="3">Tabula</th>
+                    <th rowspan="2">Ceturtā kolonna</th>
+                </tr>
+                <tr>
+                    <th>Company</th>
+                    <th>Contact</th>
+                    <th>Country</th>
+
+                </tr>
+                <tr>
+                    <td>Alfreds Futterkiste</td>
+                    <td>Maria Anders</td>
+                    <td>Germany</td>
+                    <td>Germany</td>
+                </tr>
+                <tr>
+                    <td>Centro comercial Moctezuma</td>
+                    <td>Francisco Chang</td>
+                    <td colspan="2">Mexico</td>
+                    <!-- <td>Mexico</td> -->
+                </tr>
+            </table>
+
+        </main>
+        <aside>
+            <h3>Jūsu reklāma</h3>
+            <div class="images">
+                <img src="" alt="reklama">
+                <img src="" alt="reklama">
+                <img src="" alt="reklama">
+                <img src="" alt="reklama">
+                <img src="" alt="reklama">
+            </div>
+        </aside>
+    </div>
 
 
 
-   
 
 
-    <h1>Hello world!!!</h1>
-    <h1>Cits virsraksts</h1>
-    <h2>Mācos veidot mājaslapas</h2>
-    <h3>Virsraksts</h3>
-    <h1 class="heading-1">Profesionālās tālākizglītības centrs</h1>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam earum quo et nemo, <br>
-        <b>magnam quaerat</b>, nisi sed quas tempore aliquam qui dolore enim quae mollitia <i>delectus</i> sapiente
-        porro <u>ullam iste</u>.
-    </p>
 
 
-    <ul id="saraksts">
-        <li>Pirmdiena</li>
-        <li>otrdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-    </ul>
-    <ol>
-        <li>Pirmdiena</li>
-        <li>otrdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-        <li>Trešdiena</li>
-    </ol>
-
-    <!-- komentārs -->
-
-    <a href="https://www.eiropascentrs.lv/lv" target="_blank">
-        Doties uz mācībām
-    </a>
-    <a href="url">
-        <h1>laižam</h1>
-    </a>
-    <a href="#saraksts">link text</a>
-
-
-    <img src="https://www.sportsdirect.com/images/imgzoom/84/84537062_xxl.jpg" alt="Italian Trulli" width="300">
-
-    <img src="./imac-1998.jpg" alt="Italian Trulli" width="300">
-
-    <h2>Tabula</h2>
-    <table border="1">
-       <tr>
-            <th colspan="3">Tabula</th>
-            <th rowspan="2">Ceturtā kolonna</th>
-       </tr>
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-             
-        </tr>
-        <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-            <td>Germany</td>
-        </tr>
-        <tr>
-            <td>Centro comercial Moctezuma</td>
-            <td>Francisco Chang</td>
-            <td colspan="2">Mexico</td>
-            <!-- <td>Mexico</td> -->
-        </tr>
-    </table>
-
-    <h2>HTML formas</h2>    
+    <h2>HTML formas</h2>
 
     <form action="">
         <label for="name">Jūsu vārds</label>
@@ -116,7 +132,7 @@
             <option value="2">Ford</option>
             <option value="3">BMW</option>
             <option value="4">Audi</option>
-        </select> <br>  
+        </select> <br>
         <label for="bio">Nedaudz par sevi:</label> <br>
         <textarea name="bio" id="bio"></textarea><br>
 
