--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <aside>
             <h3>Jūsu reklāma</h3>
             <div class="images">
-                <img src="" alt="reklama">
-                <img src="" alt="reklama">
-                <img src="" alt="reklama">
-                <img src="" alt="reklama">
-                <img src="" alt="reklama">
+               <img src="" alt="">
+               <img src="" alt="">
+               <img src="" alt="">
+               <img src="" alt="">
+               <img src="" alt="">
             </div>
         </aside>
     </div>
