--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>My new web</title>
 </head>
 
@@ -101,15 +101,45 @@
         </main>
         <aside>
             <h3>Jūsu reklāma</h3>
-            <div class="images">
-               <img src="" alt="">
-               <img src="" alt="">
-               <img src="" alt="">
-               <img src="" alt="">
-               <img src="" alt="">
+            <div class="right_banners">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
         </aside>
     </div>
+    <footer>
+        <div class="left_footer">
+            <h2>HTML formas</h2>
+
+            <form action="">
+                <label for="name">Jūsu vārds</label>
+                <input type="text" name="name" id="name"><br>
+                <label for="surname">Jūsu uzvārds</label>
+                <input type="text" name="surname" id="surname"><br>
+                <label for="email">Epasts:</label>
+                <input type="email" name="email" id="email"><br>
+                <label for="auto">Jūsu auto marka:</label>
+                <select name="auto" id="auto">
+                    <option value="1">Mercedes</option>
+                    <option value="2">Ford</option>
+                    <option value="3">BMW</option>
+                    <option value="4">Audi</option>
+                </select> <br>
+                <label for="bio">Nedaudz par sevi:</label> <br>
+                <textarea name="bio" id="bio"></textarea><br>
+
+                <button type="submit">Nosūtīt</button>
+                <button type="reset">Notīrīt formu</button>
+            </form>
+        </div>
+        <div class="right_footer">
+            <!-- Te nāks google maps -->
+        </div>
+          
+    </footer>
 
 
 
@@ -117,29 +147,7 @@
 
 
 
-    <h2>HTML formas</h2>
 
-    <form action="">
-        <label for="name">Jūsu vārds</label>
-        <input type="text" name="name" id="name"><br>
-        <label for="surname">Jūsu uzvārds</label>
-        <input type="text" name="surname" id="surname"><br>
-        <label for="email">Epasts:</label>
-        <input type="email" name="email" id="email"><br>
-        <label for="auto">Jūsu auto marka:</label>
-        <select name="auto" id="auto">
-            <option value="1">Mercedes</option>
-            <option value="2">Ford</option>
-            <option value="3">BMW</option>
-            <option value="4">Audi</option>
-        </select> <br>
-        <label for="bio">Nedaudz par sevi:</label> <br>
-        <textarea name="bio" id="bio"></textarea><br>
-
-        <button type="submit">Nosūtīt</button>
-        <button type="reset">Notīrīt formu</button>
-
-    </form>
 
 </body>
 
