--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <body style="min-height:2000px">
     <header>
-        <img src="" alt="" class="logo" />
-        <h1>Learn to make WebSites</h1>
+        <img src="https://placehold.jp/3d4070/ffffff/150x150.png" alt="" class="logo" />
+        <h1 class="heading1">HTML+CSS+JS</h1>
+        <h2 class="heading2">Learn to make WebSites</h2>
         <nav>
             <a href="index.html">Galvenā</a>
             <a href="html.html">HTML</a>
@@ -138,7 +139,7 @@
         <div class="right_footer">
             <!-- Te nāks google maps -->
         </div>
-          
+
     </footer>
 
 
