--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <img src="https://placehold.jp/3d4070/ffffff/150x150.png" alt="" class="logo" />
         <h1 class="heading1">HTML+CSS+JS</h1>
         <h2 class="heading2">Learn to make WebSites</h2>
-        <nav>
-            <a href="index.html">Galvenā</a>
-            <a href="html.html">HTML</a>
-            <a href="css.html">CSS</a>
-            <a href="js.html">JS</a>
-        </nav>
+
     </header>
+    <nav>
+        <a href="index.html">Galvenā</a>
+        <a href="html.html">HTML</a>
+        <a href="css.html">CSS</a>
+        <a href="js.html">JS</a>
+    </nav>
     <div class="container">
         <main>
             <h1>Hello world!!!</h1>
@@ -111,7 +112,7 @@
             </div>
         </aside>
     </div>
-    <footer>
+    <footer >
         <div class="left_footer">
             <h2>HTML formas</h2>
 
@@ -137,7 +138,9 @@
             </form>
         </div>
         <div class="right_footer">
+                <h5>Mēs kartē</h5>
             <!-- Te nāks google maps -->
+             <iframe class="google_maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2176.6493241882376!2d24.159480976718783!3d56.93767577354572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecf2881ab3a2d%3A0x38f05fb5534b5b16!2zRWlyb3BhcyBUxIFsbcSBY8SrYmFzIGNlbnRycw!5e0!3m2!1sen!2slv!4v1748283783374!5m2!1sen!2slv"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
     </footer>
