--- a/index.html
+++ b/index.html
@@ -143,12 +143,22 @@
              <iframe class="google_maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2176.6493241882376!2d24.159480976718783!3d56.93767577354572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecf2881ab3a2d%3A0x38f05fb5534b5b16!2zRWlyb3BhcyBUxIFsbcSBY8SrYmFzIGNlbnRycw!5e0!3m2!1sen!2slv!4v1748283783374!5m2!1sen!2slv"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
+        
     </footer>
 
 
 
-
-
+    <!-- Chat window -->
+        <div class="chat_window">
+            <button class="close_btn">X</button>
+        <form action="">
+            <input type="text" name="" id="">
+            <input type="email" name="" id="">
+            <textarea name="" id=""></textarea>
+            <button type="submit">Nosūtīt</button>
+        </form>
+    </div>
+     <!-- Chat window -->
 
 
 
