--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="min-height:2000px">
     <header>
         <img src="https://placehold.jp/3d4070/ffffff/150x150.png" alt="" class="logo" />
-        <h1 class="heading1">HTML+CSS+JS</h1>
+        <h1 class="heading1 shadow-drop-2-center">HTML+CSS+JS</h1>
         <h2 class="heading2">Learn to make WebSites</h2>
 
     </header>
