--- a/uzdevums5.html
+++ b/uzdevums5.html
@@ -110,6 +110,72 @@
                 }
 
             }
+
+
+            #sec2{
+                min-height: 373px;
+                background: rgb(217, 217, 217);
+                display: flex;
+                justify-content: space-evenly;
+                flex-wrap: wrap;
+                gap:10px;
+                padding-top:68px;
+
+
+                img{
+                            width: 305px;
+                            height: 226px;
+                            position: relative;
+                            top:calc(91px - 68px);
+                    }
+                .sec2_content_text{
+                            max-width: 304px;
+                      
+                            h3{
+                                color: rgb(0, 0, 0);
+                                font-family: Inter;
+                                font-size: 38px;
+                                font-weight: 400;
+                                text-align: center;
+                                margin-bottom: 27px;
+                            }
+                            p{
+                                color: rgb(0, 0, 0);
+                                font-family: Inter;
+                                font-size: 14px;
+                                font-weight: 400;
+                                text-align: left;
+                            }
+                        }
+
+
+            }
+
+            #sec3{
+                height: 353px;
+                background: rgb(162, 243, 249);
+                display: flex;
+                flex-wrap: wrap;
+                gap:10px;
+                justify-content: space-evenly;
+                align-items: center;
+
+                   img{
+                            width: 305px;
+                            height: 226px;
+                    }
+            }
+            footer{
+                height: 100px;
+                background: rgb(217, 217, 217);
+                color: rgb(0, 0, 0);
+                font-family: Inter;
+                font-size: 38px;
+                font-weight: 400;
+                line-height:100px;
+                letter-spacing: 0%;
+                text-align: center;
+            }
     </style>
     <title>Document</title>
 </head>
@@ -133,10 +199,22 @@
             </div>
         </div>
     </section>
-    <section id="sec2"></section>
-    <section id="sec3"></section>
+    <section id="sec2">
+       <img src="./img1.png" alt="">
+       <img src="./img1.png" alt="">
+       <div class="sec2_content_text">
+                    <h3>Block title</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining esse</p>
+                </div>
+        
+    </section>
+    <section id="sec3">
+         <img src="./img1.png" alt="">
+         <img src="./img1.png" alt="">
+         <img src="./img1.png" alt="">
+    </section>
     <footer>
-
+            Footer - #D9D9D9
     </footer>
 </body>
 </html>
