--- a/Javascript.html
+++ b/Javascript.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        /* Te rakstam stilus */
-
-    </style>
+    
+    <script src="./js1.js">
+        alert()
+    </script>
 </head>
 <body>
     <!-- Te HTML -->
