--- a/Javascript.html
+++ b/Javascript.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <script src="./js1.js">
+    <!-- <script src="./js1.js">
         alert();
-    </script>
+    </script> -->
+
+
+    <script src="./cikli.js"></script>
 </head>
 <body>
     <!-- Te HTML -->
