--- a/Javascript.html
+++ b/Javascript.html
@@ -10,7 +10,8 @@
     </script> -->
 
 
-    <script src="./cikli.js"></script>
+    <!-- <script src="./cikli.js"></script> -->
+    <script src="./zarosanas.js" defer></script>
 </head>
 <body>
     <!-- Te HTML -->
