--- a/Javascript.html
+++ b/Javascript.html
@@ -11,12 +11,14 @@
 
 
     <!-- <script src="./cikli.js"></script> -->
-    <script src="./zarosanas.js" defer></script>
+    <!-- <script src="./zarosanas.js" defer></script>
+    <script src="./regulara_izteiksme.js" defer></script> -->
+    <script src="./funkcijas.js" defer></script>
 </head>
 <body>
     <!-- Te HTML -->
      <!-- <h1>Javascript</h1> -->
 
-    
+    <button onclick="izvade()"> Saskaitīt</button>
 </body>
 </html>
