--- a/Javascript.html
+++ b/Javascript.html
@@ -14,10 +14,23 @@
     <!-- <script src="./zarosanas.js" defer></script>
     <script src="./regulara_izteiksme.js" defer></script> -->
     <script src="./funkcijas.js" defer></script>
+    <script src="./DOM.js" defer></script>
+
 </head>
 <body>
     <!-- Te HTML -->
-     <!-- <h1>Javascript</h1> -->
+     <h1>Javascript</h1>
+     <h2 id="second"></h2>
+
+     <div>
+        <p></p>
+     </div>
+
+     <img>
+     <img>
+     <img>
+     <img>
+     <img>
 
     <button onclick="izvade()"> Saskaitīt</button>
 </body>
