--- a/Javascript.html
+++ b/Javascript.html
@@ -31,7 +31,7 @@
      <img>
      <img>
      <img>
-
+     <table border="1"></table>
     <button onclick="izvade()"> Saskaitīt</button>
 </body>
 </html>
