--- a/Javascript.html
+++ b/Javascript.html
@@ -16,6 +16,17 @@
     <script src="./funkcijas.js" defer></script>
     <script src="./DOM.js" defer></script>
 
+
+    <style>
+
+        .border{
+            border: 2px solid rgb(236, 13, 13);
+            padding: 10px;
+        }
+        .background{
+            background-color: aquamarine;
+        }
+    </style>
 </head>
 <body>
     <!-- Te HTML -->
