--- a/Javascript.html
+++ b/Javascript.html
@@ -15,6 +15,8 @@
     <script src="./regulara_izteiksme.js" defer></script> -->
     <script src="./funkcijas.js" defer></script>
     <script src="./DOM.js" defer></script>
+    <script src="./datumi.js" defer></script>
+
 
 
     <style>
