--- a/Javascript.html
+++ b/Javascript.html
@@ -16,6 +16,7 @@
     <script src="./funkcijas.js" defer></script>
     <script src="./DOM.js" defer></script>
     <script src="./datumi.js" defer></script>
+    <script src="./js_vaicajumi.js" defer></script>
 
 
 
