--- a/Javascript.html
+++ b/Javascript.html
@@ -64,6 +64,20 @@
 
         <button id="closeDialog1">Aizvērt</button>
      </dialog>
+
+     <dialog id="openDialog2">
+            <table class="userData">
+                 <tr>
+                    <td>Vārds:</td>
+                    <td>Epasts</td>
+                    <td>Tālrunis</td>
+                 </tr>  
+                 
+            </table>
+
+
+       <button id="closeDialog2">Aizvērt</button>
+     </dialog>
      
 
     <!-- <button onclick="izvade()"> Saskaitīt</button> -->
