--- a/Javascript.html
+++ b/Javascript.html
@@ -76,7 +76,7 @@
             </table>
 
 
-       <button id="closeDialog2">Aizvērt</button>
+       <button id="closeDialog2" onclick="closeModal('#openDialog2')" >Aizvērt</button>
      </dialog>
      
 
