--- a/Javascript.html
+++ b/Javascript.html
@@ -81,5 +81,14 @@
      
 
     <!-- <button onclick="izvade()"> Saskaitīt</button> -->
+
+
+    <form action="" id="contactForm">
+        <input type="text" name="vards" id="">
+        <input type="email" name="epasts" id="">
+        <textarea name="message" id=""></textarea>
+        <input type="submit" value="Nosūtīt">
+
+    </form>
 </body>
 </html>
