--- a/Javascript.html
+++ b/Javascript.html
@@ -84,8 +84,8 @@
 
 
     <form action="" id="contactForm">
-        <input type="text" name="vards" id="">
-        <input type="email" name="epasts" id="">
+        <input type="text" name="Name" id="">
+        <input type="email" name="email" id="">
         <textarea name="message" id=""></textarea>
         <input type="submit" value="Nosūtīt">
 
